# mangoszero

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: core_codestyle.yml  core_linux_build.yml  core_windows_build.yml  docker_build.yml
cmake/: MangosParams.cmake
doc/: AuctionHouseBot.md
docs/superpowers/plans/: 2026-07-23-realmd-auth-stream-safety.md  2026-07-23-realmd-live-log-flush.md
docs/superpowers/specs/: 2026-07-23-realmd-auth-stream-safety-design.md  2026-07-23-realmd-live-log-flush-design.md
docs/superpowers/validation/: realmd-auth-stream-safety.md
linux/: getmangos.sh
src/: CMakeLists.txt
src/game/: CMakeLists.txt
src/ipc/: AuctionIntents.h  BoundedQueue.h  CMakeLists.txt  IpcChannel.cpp  IpcChannel.h  IpcClientHandler.cpp  IpcClientHandler.h  IpcLink.h  IpcMessage.cpp  IpcOpcodes.h  IpcProcess.cpp  IpcProcess.h  IpcReliable.h  IpcServerHandler.cpp  IpcServerHandler.h  IpcSocket.cpp  IpcSocket.h  IpcThread.cpp  IpcThread.h  IpcVersion.h  PlayerMutations.h  WorkerSupervisor.cpp  WorkerSupervisor.h
src/mangosd/: CMakeLists.txt  MangosdTest.cpp  Master.cpp  Master.h  RASession.h  mangosd.conf.dist.in  mangosd.cpp
src/proto/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  IClientLink.h  IWorldGateway.h  Listener.cpp  Listener.h  Opcodes.h  PacketCodec.cpp  PacketCodec.h
src/shared/: CMakeLists.txt  revision_data.h.in
tests/: CMakeLists.txt  CheckProtoBoundary.cmake  CheckWorldNetworkBoundary.cmake  DatabaseConcurrencyTests.cpp  ProtocolTests.cpp  RealmdAuthStreamSmoke.ps1  SessionMailboxTests.cpp
(+374 files in other folders)
